kaccounts-integration (4:15.12.3-0ubuntu3) UNRELEASED; urgency=medium

  * DO a ppa build to test. 
  * Add upstream_enforce_accounts-glib_version.patch 
  * Add series file. 

 -- Scarlett Clark <sgclark@kubuntu.org>  Sat, 23 Apr 2016 10:18:44 -0700

kaccounts-integration (4:15.12.3-0ubuntu2) xenial; urgency=medium

  * Add upstream_require_accountsqt_version.patch 

 -- Scarlett Clark <sgclark@kubuntu.org>  Sat, 23 Apr 2016 09:55:30 -0700

kaccounts-integration (4:15.12.3-0ubuntu1) xenial; urgency=medium

  * New upstream bugfix release
  * Add upstream_allow_install_other_providers.patch (LP: #1451728) 
  * Add the file... 
  * New upstream bugfix release

 -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 14 Apr 2016 14:57:59 -0700

kaccounts-integration (4:15.12.1-0ubuntu1) xenial; urgency=medium

  * New upstream release.
  * Debian merge: No remaining changes.
  * Actually bump the version...
  * Fix install file. 

 -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 09 Mar 2016 10:26:15 +0100

kaccounts-integration (4:15.12.0-0ubuntu1) UNRELEASED; urgency=medium

  * New upstream release

 -- Clive Johnston <clivejo@aol.com>  Sat, 02 Jan 2016 13:32:35 +0000

kaccounts-integration (15.12.0-1~) UNRELEASED; urgency=medium

  * New upstream release.
  * Add libkf5declarative-dev to Build-Depends.

 -- Maximiliano Curia <maxy@debian.org>  Wed, 16 Dec 2015 16:16:41 +0100

kaccounts-integration (15.08.3-1) unstable; urgency=medium

  * New upstream release.
  * Change my email address back
  * Update symbols file with new symbols.

 -- Diane Trout <diane@ghic.org>  Fri, 04 Dec 2015 10:55:04 -0800

kaccounts-integration (4:15.08.2-0ubuntu1) wily; urgency=medium

  * New upstream release
  * Fix install file. 

 -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 14 Oct 2015 11:53:28 +0100

kaccounts-integration (4:15.08.1-0ubuntu1) wily; urgency=medium

  * New upstream release (15.08.1)

 -- Clive Johnston <clivejo@aol.com>  Tue, 22 Sep 2015 16:13:27 +0100
